--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,8 @@ android {
 }
 
 dependencies {
-    compile 'com.cjj.materialrefeshlayout:library:1.1.0'
+    compile project(':library')
+//    compile 'com.cjj.materialrefeshlayout:library:1.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.android.support:cardview-v7:22.2.1'
 }
