--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@drawable/a"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/BaseTheme" >
         <activity
             android:name=".ScrollViewActivity"
             android:label="@string/app_name" >
