--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
 }
 
 dependencies {
-    compile project(':library')
-//    compile 'com.cjj.materialrefeshlayout:library:1.2.1'
+//    compile project(':library')
+    compile 'com.cjj.materialrefeshlayout:library:1.3.0'
     compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.android.support:cardview-v7:22.2.1'
 }
